load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/weaveworks/cortex/cmd/ruler",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/chunk:go_default_library",
        "//pkg/chunk/storage:go_default_library",
        "//pkg/distributor:go_default_library",
        "//pkg/ring:go_default_library",
        "//pkg/ruler:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/common/log:go_default_library",
        "//vendor/github.com/weaveworks/common/middleware:go_default_library",
        "//vendor/github.com/weaveworks/common/server:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)

go_binary(
    name = "ruler",
    importpath = "github.com/weaveworks/cortex/cmd/ruler",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
