load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "dummy.go",
        "querier.go",
    ],
    importpath = "github.com/weaveworks/cortex/pkg/querier",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ingester/client:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/prometheus/common/model:go_default_library",
        "//vendor/github.com/prometheus/prometheus/promql:go_default_library",
        "//vendor/github.com/prometheus/prometheus/retrieval:go_default_library",
        "//vendor/github.com/prometheus/prometheus/storage/local:go_default_library",
        "//vendor/github.com/prometheus/prometheus/storage/metric:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["querier_test.go"],
    importpath = "github.com/weaveworks/cortex/pkg/querier",
    library = ":go_default_library",
    deps = [
        "//pkg/ingester/client:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/wire:go_default_library",
        "//vendor/github.com/gogo/protobuf/proto:go_default_library",
        "//vendor/github.com/golang/snappy:go_default_library",
        "//vendor/github.com/prometheus/common/model:go_default_library",
        "//vendor/github.com/prometheus/prometheus/storage/local:go_default_library",
        "//vendor/github.com/prometheus/prometheus/storage/metric:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)
