load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "ring_proto",
    srcs = ["ring.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "ring_go_proto",
    proto = ":ring_proto",
    importpath = "github.com/weaveworks/cortex/pkg/ring",
    compiler = "//tools/build/bazel:gogo_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "consul_client.go",
        "consul_client_mock.go",
        "http.go",
        "model.go",
        "ring.go",
        "util.go",
    ],
    embed = [":ring_go_proto"],
    importpath = "github.com/weaveworks/cortex/pkg/ring",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "//vendor/github.com/gogo/protobuf/proto:go_default_library",
        "//vendor/github.com/gogo/protobuf/sortkeys:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/golang/snappy:go_default_library",
        "//vendor/github.com/hashicorp/consul/api:go_default_library",
        "//vendor/github.com/hashicorp/go-cleanhttp:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/common/log:go_default_library",
    ],
)

filegroup(
    name = "go_default_library_protos",
    srcs = ["ring.proto"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["ring_test.go"],
    importpath = "github.com/weaveworks/cortex/pkg/ring",
    library = ":go_default_library",
)
