load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["runner.go"],
    importpath = "github.com/weaveworks/cortex/tools/runner",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/mgutz/ansi:go_default_library",
        "//vendor/github.com/weaveworks/common/mflag:go_default_library",
    ],
)

go_binary(
    name = "runner",
    importpath = "github.com/weaveworks/cortex/tools/runner",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
