load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "timed.go",
        "traced.go",
    ],
    importpath = "github.com/weaveworks/cortex/pkg/configs/db",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configs:go_default_library",
        "//pkg/configs/db/memory:go_default_library",
        "//pkg/configs/db/postgres:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/go-kit/kit/log/level:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/weaveworks/common/instrument:go_default_library",
    ],
)
