load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["unit.go"],
    importpath = "github.com/weaveworks/cortex/pkg/configs/db/dbtest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configs/db:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/github.com/weaveworks/common/logging:go_default_library",
    ],
)
